# Lodestar

./: .cspell.json  .gitattributes  .gitignore  CLAUDE.md  GETTING-STARTED.md  LICENSE  README.md  _quarto-sop-checklist.yml  _quarto-sop-detailed.yml  _quarto-sop-walkthrough.yml  _quarto.yml  index.qmd  references.bib  requirements.txt  thesis.ps1  tools.yml
.claude/skills/disperse/: SKILL.md
.claude/skills/grammar-review/: SKILL.md
_extensions/patent/: _extension.yml  template.typ
_extensions/shortcodes/: _extension.yml  model.lua  revisions.lua  tool.lua
archive/: external-index.qmd  index.qmd
chapters/: CH-04-future-work.qmd
chapters/01-background/: CH-1a-example-section.qmd  index.qmd
chapters/02-methods/: index.qmd
chapters/03-operation/: index.qmd
chapters/03-operation/sops/: SOP-01-example-procedure.qmd  _sop-template.qmd
docs/: README.md  decisions.md  render-pipeline.md  workflow-inbox-dispersal.md  workflow-item-lifecycle.md  workflow-publish-qc.md  workflow-weekly-update.md
initiatives/: index.qmd
initiatives/_template/epic/: README.qmd
initiatives/example-research/: README.qmd
scripts/git-hooks/: pre-commit
scripts/render/: _lib.py  audit_items.py  build_board.py  build_file_trees.py  build_gantt.py  build_listings.py  build_revisions.py  disperse.py  new_item.py  publish.py  pyproject.toml  render_satellites.py
scripts/render/qc/: link_check.py  prose_check.py
styles/: thesis.scss  thesis.tex
updates/: index.qmd
updates/WU-2026-06-12-week-01/: index.qmd
updates/_template/: index.qmd
(+10 files in other folders)
